<resources>
    <string name="app_name">Khatera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tasks">Tasks</string>
    <string name="textview">textview</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="required">*required</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="title">title</string>
    <string name="default_notification_channel_id">default channel id</string>
    <string name="are_you_sure">Are You Sure?</string>
    <string name="you_want_to_share_this_note_with_all_users">you want to share this khatera with all users!</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="enter_name">Enter Name</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="email_or_password_is_not_written_correctly">Email or Password is not written correctly</string>
    <string name="something_went_wrong_try_again">Something went wrong,try again</string>
    <string name="email_or_password_incorrect">Email or Password Incorrect</string>
    <string name="please_verify_your_account">Please verify your account..</string>
    <string name="write_note">Khatera</string>
    <string name="failed_to_load_notes">Failed to load data</string>
    <string name="you_want_to_delete_this_note">you want to delete this khatera!</string>
    <string name="title_is_empty">Title can\'t be empty</string>
    <string name="content_is_empty">Khatera can\'t be empty</string>
    <string name="failed_to_share_note">Failed to share khatera</string>
    <string name="note_shared_successfully">Khatera shared successfully</string>
    <string name="this_note_already_shared">This khatera already shared</string>
    <string name="content">Content:</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="khatera">Khatera</string>
    <string name="shared_items">Shared Items:</string>
    <string name="title2">Title:</string>
    <string name="created_at">Created at:</string>
    <string name="you">You</string>
    <string name="created_by">Created by:</string>
    <string name="update_image">Update Image</string>
    <string name="remove_image">Remove Image</string>
</resources>