<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".myPackages.ui.xml.fragments.SignUp"
    android:background="@color/black"
    android:orientation="vertical"
    android:padding="@dimen/_30sdp">

    <!-- Image at top -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:gravity="center">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/eye" />
    </LinearLayout>

    <!-- Email EditText -->
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:textSize="@dimen/_12sdp"
        android:hint="@string/enter_email"
        android:textColor="@android:color/white"
        android:textColorHint="#CEE8BC"
        android:background="@drawable/rounded_border"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/emailrequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="#C30B0B"
        android:visibility="invisible"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:hint="@string/enter_password"
        android:textSize="@dimen/_12sdp"
        android:textColor="@android:color/white"
        android:textColorHint="#CEE8BC"
        android:background="@drawable/rounded_border"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:drawableStart="@drawable/lock_open"
        android:drawableEnd="@drawable/visibility"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/passwordrequired"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required"
        android:textColor="#C30B0B"
        android:visibility="invisible"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"/>

    <!-- Button + ProgressBar -->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="Sign In"
            android:clickable="true"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_shape"
            android:textColor="@android:color/white"/>

        <androidx.compose.ui.platform.ComposeView
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:indeterminateTint="#FFFFFF"/>
    </FrameLayout>

</LinearLayout>
